Format and size warning

--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -10,7 +10,7 @@
 		<p>EAO publishes all accepted comments within seven days of receipt. Comments are not accepted if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
 		<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
 		<p>You may provide your name and city/town when making a comment, but in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
-		<p>All hyperlinks in comments will be converted to plain text. All attachments will be limited to 5MB.</p>
+		<p>All hyperlinks in comments will be converted to plain text. All attachments must be in PDF format and limited to 5MB.</p>
 
 	</div>
 
