--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -141,7 +141,7 @@
 					<p ng-show="!legalMore"><a href ng-click="legalMore = true"><em>More...</em></a></p>
 					<p ng-show="legalMore">EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
 					<p ng-show="legalMore">You may provide your name and city/town when making a comment, but in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
-					<p ng-show="legalMore">All hyperlinks in comments will be converted to plain text. All attachments will be limited to 5MB.</p>
+					<p ng-show="legalMore">All hyperlinks in comments will be converted to plain text. All attachments must be in PDF format and limited to 5MB.</p>
 					<p ng-show="legalMore"><a href ng-click="legalMore = false"><em>Less</em></a></p>
 
 					<hr>
