Adding import projects UI, handler and route for importing.  Initial stub for parsing implemented

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -84,6 +84,9 @@
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
 			<li><a x-modal-project-entry href x-project="menu.newproject">Add Project</a></li>
 		</ul>
+		<ul class="list-unstyled" ng-show="menu.authentication.user">
+			<li><a x-modal-project-import href x-project="menu.import">Import Projects</a></li>
+		</ul>
 	</div>
 
 
