--- a/modules/comments/client/views/period-edit.html
+++ b/modules/comments/client/views/period-edit.html
@@ -1,75 +1,69 @@
-<div class="modal-header">
-	<h3 class="modal-title">Period Detail</h3>
-</div>
-
-<div class="modal-body">
-
-	<div class="block-content">
-		<div class="panel-body">
-			<!-- START/END DATE -->
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label class="control-label">Content for Review</label>
-						<select ng-model="processEngageWGConfig.config.contentType" class="form-control" ng-options="doc[0] as doc[0].name for doc in processEngageWGConfig.config.currentDocuments">
-						</select>
-					</div>
-					<div class="form-group">
-						<label class="control-label">Working Group Session Open</label>
-
-						<div class="input-group">
-							<input type="text"
-								class="form-control text-center"
-								ng-model="processEngageWGConfig.config.dateOpen"
-								ng-disabled="1"/>
-							<div x-modal-date-picker
-								x-selected-date="processEngageWGConfig.config.dateStarted"
-								class="input-group-addon btn-default">
-							<i class="glyphicon glyphicon-calendar"></i></div>
-						</div>
-
-					</div>
-					<div class="form-group">
-						<label class="control-label">Working Group Session Close</label>
-
-						<div class="input-group">
-							<input type="text"
-								class="form-control text-center"
-								ng-model="processEngageWGConfig.config.dateClose"
-								ng-disabled="1"/>
-							<div x-modal-date-picker
-								x-selected-date="processEngageWGConfig.config.dateCompleted"
-								class="input-group-addon btn-default">
-							<i class="glyphicon glyphicon-calendar"></i></div>
-						</div>
-
-					</div>
+<h1 class="page-title">
+	Add/Edit Period
+</h1>
+<div class="block-content">
+	<div class="panel-body">
+		<!-- START/END DATE -->
+		<div class="row">
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label class="control-label">Content for Review</label>
+					<select ng-model="period.contentType" class="form-control" ng-options="doc[0] as doc[0].name for doc in period.currentDocuments">
+					</select>
 				</div>
-				<div class="col-sm-3">
-					<label class="control-label">Select Applicable Roles</label>
-					<div class="well well-sm">
-						<ul class="list-unstyled task-list">
-							<li ng-repeat="role in processEngageWGConfig.config.projectRoles">
-								<button class="btn btn-block btn-sm btn-layer btn-default"
-									ng-click="processEngageWGConfig.chosenRoles[role] = !processEngageWGConfig.chosenRoles[role]"
-									ng-class="{'btn-success': processEngageWGConfig.chosenRoles[role]}">{{ role }}</button>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<label class="control-label">Instructions to Working Group</label>
-					<textarea rows="6" ng-model="processEngageWGConfig.config.instructions" class="form-control"></textarea>
-				</div>
+				<div class="form-group">
+					<label class="control-label">Working Group Session Open</label>
 
+					<div class="input-group">
+						<input type="text"
+							class="form-control text-center"
+							ng-model="period.dateOpen"
+							ng-disabled="1"/>
+						<div x-modal-date-picker
+							x-selected-date="period.dateStarted"
+							class="input-group-addon btn-default">
+						<i class="glyphicon glyphicon-calendar"></i></div>
+					</div>
+
+				</div>
+				<div class="form-group">
+					<label class="control-label">Working Group Session Close</label>
+
+					<div class="input-group">
+						<input type="text"
+							class="form-control text-center"
+							ng-model="period.dateClose"
+							ng-disabled="1"/>
+						<div x-modal-date-picker
+							x-selected-date="period.dateCompleted"
+							class="input-group-addon btn-default">
+						<i class="glyphicon glyphicon-calendar"></i></div>
+					</div>
+
+				</div>
 			</div>
+			<div class="col-sm-3">
+				<label class="control-label">Select Applicable Roles</label>
+				<div class="well well-sm">
+					<ul class="list-unstyled task-list">
+						<li ng-repeat="role in period.projectRoles">
+							<button class="btn btn-block btn-sm btn-layer btn-default"
+								ng-click="processEngageWGConfig.chosenRoles[role] = !processEngageWGConfig.chosenRoles[role]"
+								ng-class="{'btn-success': processEngageWGConfig.chosenRoles[role]}">{{ role }}</button>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<label class="control-label">Instructions to Working Group</label>
+				<textarea rows="6" ng-model="period.instructions" class="form-control"></textarea>
+			</div>
+
 		</div>
 	</div>
-
-</div> <!-- /modalbody -->
-
-<div class="modal-footer">
-	<a class="btn btn-default" href ng-click="p.cancel()">Cancel</a>
-	<a class="btn btn-default" href ng-click="p.ok()">OK</a>
+</div>
+<div>
+	<a class="btn btn-default" ui-sref="p.commentperiod.list">Cancel</a>
+	<a class="btn btn-primary" href ng-click="save()">Save</a>
 </div>
 
