--- a/modules/topics/client/views/topic-view.html
+++ b/modules/topics/client/views/topic-view.html
@@ -1,1 +1,48 @@
-view-topic.html
+<h1 class="page-title">
+	Add/Edit Topic
+</h1>
+<div class="block-content">
+	<div class="panel-body">
+	<div class="row">
+		<div class="col-sm-9">
+			<div class="form-group">
+				Topic Name: {{topic.name}}
+			</div>
+		</div>
+		<div class="col-sm-3">
+			<div class="form-group">
+				Topic Type: {{topic.type}}
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12">
+			<div class="form-group">
+				Topic Description: {{topic.description}}
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="form-group">
+				Pillar: {{topic.pillar}}
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<div class="form-group">
+				Parent Topic: {{topic.parent}}
+			</div>
+		</div>
+	</div>
+	</div>
+</div>
+<div>
+	<a class="btn btn-default" ui-sref="admin.topic.list">Cancel</a>
+	<a class="btn btn-success" ui-sref="admin.topic.edit({topicId:topic._id})">Edit</a>
+</div>
+
+
+
