updates to allow for projects to be browsed to by code (short name) as well as more routing things and also some small fixes to the role model schema functions to go along with the new seeding code

--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -3,7 +3,7 @@
 		<h3>Current Projects</h3>
 	</div>
 	<table ng-table="projectList.tableParams" class="table table-condensed table-striped">
-		<tr ng-repeat="o in $data" class='clickable' ui-sref="project({id: o._id})">
+		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
 			<td title="'Name'"     filter="{'name':'text'}"     sortable="'name'"   >{{o.name}}</td>
 			<td title="'Type'"     filter="{'type':'text'}"     sortable="'type'"   >{{o.type}}</td>
 			<td title="'Region'"   filter="{'region':'text'}"   sortable="'sector'" >{{o.region}}</td>
