--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -1,7 +1,7 @@
 <h1 class="page-title">Topics Library</h1>
 <div class="row text-right">
 	<div class="col-sm-12">
-		<a class="btn btn-success btn-sm" ui-sref="admin.topic.create()"><i class="glyphicon glyphicon-plus"></i> Add New Topic</a>
+		<a class="btn btn-info" ui-sref="admin.topic.create()"><i class="glyphicon glyphicon-plus"></i> Add New Topic</a>
 	</div>
 </div>
 <div calss="row">&nbsp;</div>
