--- a/modules/topics/client/views/topic-edit.html
+++ b/modules/topics/client/views/topic-edit.html
@@ -6,14 +6,14 @@
 	<div class="row">
 		<div class="col-sm-9">
 			<div class="form-group">
-				<label for="title" class="control-label">Topic Name</label>
-				<input id="title" type="text" class="form-control input-sm" ng-model="topic.name">
+				<label for="title" class="input-label">Topic Name</label>
+				<input id="title" type="text" class="form-control  input-lg" ng-model="topic.name">
 			</div>
 		</div>
 		<div class="col-sm-3">
 			<div class="form-group">
-				<label for="type" class="control-label">Topic Type</label>
-				<select id="type" ng-model='topic.type' class="form-control input-sm">
+				<label for="type" class="input-label">Topic Type</label>
+				<select id="type" ng-model='topic.type' class="form-control input-lg">
 					<option>Valued Component</option>
 					<option>Pathway Component</option>
 				</select>
@@ -24,8 +24,8 @@
 	<div class="row">
 		<div class="col-sm-12">
 			<div class="form-group">
-				<label for="shortDesc" class="control-label">Topic Description</label>
-				<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="topic.description" rows=6></textarea>
+				<label for="shortDesc" class="input-label">Topic Description</label>
+				<textarea id="shortDesc" type="text" class="form-control input-lg" ng-model="topic.description" rows=6></textarea>
 			</div>
 		</div>
 	</div>
@@ -33,22 +33,22 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<div class="form-group">
-				<label for="pillar" class="control-label">Pillar</label>
-				<select ng-change="selectTopic(pillar)" id="pillar" ng-model='topic.pillar' class="form-control input-sm" ng-options="pillar as pillar for pillar in pillars"></select>
+				<label for="pillar" class="input-label">Pillar</label>
+				<select ng-change="selectTopic(pillar)" id="pillar" ng-model='topic.pillar' class="form-control input-lg" ng-options="pillar as pillar for pillar in pillars"></select>
 			</div>
 		</div>
 
 		<div class="col-sm-6">
 			<div class="form-group">
-				<label for="parent" class="control-label">Parent Topic</label>
-				<select id="parent" ng-model='topic.parent' class="form-control input-sm" ng-options="topic as topic for topic in pillartopics"></select>
+				<label for="parent" class="input-label">Parent Topic</label>
+				<select id="parent" ng-model='topic.parent' class="form-control input-lg" ng-options="topic as topic for topic in pillartopics"></select>
 			</div>
 		</div>
 	</div>
 	</div>
 </div>
 <div>
-	<a class="btn btn-default" ui-sref="admin.topic.list">Cancel</a>
+	<a class="btn btn-danger" ui-sref="admin.topic.list">Cancel</a>
 	<a class="btn btn-primary" href ng-click="save()">Save</a>
 </div>
 
