lots of changes to incorporate new things with menus and also fixing up new crud stuff for conditions etc

--- a/modules/activities/client/views/activity.html
+++ b/modules/activities/client/views/activity.html
@@ -33,10 +33,10 @@
 				<tmpl-load-activity-process x-project="actBase.project" x-activity="actBase.activity"></tmpl-load-activity-process>
 			</section>
 		</section>
-		
+
 	</div> <!-- /col9 -->
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="activity" x-project="actBase.project"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="'activity'" x-project="actBase.project"></tmpl-system-menu>
 	</div>
 
 </section>
