--- a/modules/configuration/client/views/configuration.html
+++ b/modules/configuration/client/views/configuration.html
@@ -51,7 +51,7 @@
 
 	</div> <!-- /col12 -->
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="configuration"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="'configuration'"></tmpl-system-menu>
 	</div>
 
 </section>
