--- a/modules/inspectionReport/client/views/list-inspection-reports.client.view.html
+++ b/modules/inspectionReport/client/views/list-inspection-reports.client.view.html
@@ -15,7 +15,7 @@
           <label for="searchInspectionReports" class="control-label">Search Inspection Reports</label>
           <input id="searchInspectionReports" class="form-control" type="text" ng-model="listInspectionReports.search" placeholder="Search" ng-change="listInspectionReports.figureOutItemsToDisplay()" />
         </div>
-        
+
           <table class="table table-condensed table-hover">
             <thead>
             <tr>
@@ -40,6 +40,6 @@
     </div>
   </div>
   <div class='col-sm-2'>
-    <tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+    <tmpl-system-menu x-menu-context="'settings'"></tmpl-system-menu>
   </div>
 </section>
