--- a/modules/projects/client/views/projects-partials/user-activities.html
+++ b/modules/projects/client/views/projects-partials/user-activities.html
@@ -51,10 +51,10 @@
 			</table>
 		</section>
 
-		
+
 	</div> <!-- /col10 -->
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="mylist"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="'mylist'"></tmpl-system-menu>
 	</div>
 
 </section>
