--- a/modules/projects/client/views/projects.html
+++ b/modules/projects/client/views/projects.html
@@ -31,7 +31,7 @@
 
 	</div>
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="projects"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="'projects'"></tmpl-system-menu>
 	</div>
 
 </section>
