--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -34,7 +34,7 @@
 
 	</div> <!-- /col10 -->
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="'settings'"></tmpl-system-menu>
 	</div>
 
 </section>
