--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -1,32 +1,27 @@
-<section id="project-view" class="row">
-<div class='col-sm-10'>
-	<h1 class="page-title">Conditions Library</h1>
-	<div class="row text-right">
-		<div class="col-sm-12">
-			<button class="btn btn-success btn-sm" x-mode="add" x-collection="data.collection" x-edit-condition-modal><i class="glyphicon glyphicon-plus"></i> Add New Condition</button>
-		</div>
+<h1 class="page-title">Conditions Library</h1>
+<div class="row text-right">
+	<div class="col-sm-12">
+		<a class="btn btn-success btn-sm" ui-sref="admin.condition.create()"><i class="glyphicon glyphicon-plus"></i> Add New Condition</a>
 	</div>
-	<div calss="row">&nbsp;</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<section class="panel panel-default">
-				<table ng-table="data.tableParams" class="dtable table table-condensed table-bordered table-striped">
-					<tr ng-repeat="o in $data">
-						<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    ><a href x-edit-condition-modal x-mode="view" x-condition="o">{{o.name}}</a></td>
-						<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
-						<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
-						<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-						<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
-						<td><button class="btn btn-default btn-xs" x-edit-condition-modal x-mode="edit" x-condition="o"><i class="glyphicon glyphicon-pencil"></i></button></td>
-					</tr>
-				</table>
-			</section>
-		</div>
-	</div>
-
-</div> <!-- /col10 -->
-<div class='col-sm-2'>
-	<tmpl-system-menu x-menu-context="project" x-project="projDescEdit.project"></tmpl-system-menu>
 </div>
-
-</section>
+<div calss="row">&nbsp;</div>
+<div class="row">
+	<div class="col-sm-12">
+		<section class="panel panel-default">
+			<table ng-table="tableParams" class="dtable table table-condensed table-bordered table-striped">
+				<tr ng-repeat="o in $data" ui-sref="admin.topic.detail({conditionId:o._id})">
+					<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    ><a href x-edit-condition-modal x-mode="view" x-condition="o">{{o.name}}</a></td>
+					<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
+					<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="ptypes" >{{o.sector}}</td>
+					<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="stypes">{{o.stage}}</td>
+					<td data-title="'Pillar'" title:'Pillar'  filter="{'pilla	r':'select'}"   sortable="'pillar'"  filter-data="pillars">{{o.pillar}}</td>
+					<td>
+						<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="admin.condition.edit({conditionId:o._id})">
+						<i class="glyphicon glyphicon-pencil"></i>
+						</a>
+					</td>
+				</tr>
+			</table>
+		</section>
+	</div>
+</div>
