--- a/modules/organizations/client/views/edit-organization.client.view.html
+++ b/modules/organizations/client/views/edit-organization.client.view.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div class='col-sm-2'>
-        <tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+        <tmpl-system-menu x-menu-context="'settings'"></tmpl-system-menu>
     </div>
 </section>
