--- a/modules/project-conditions/client/views/projectcondition-list.html
+++ b/modules/project-conditions/client/views/projectcondition-list.html
@@ -26,7 +26,7 @@
 
 </div> <!-- /col10 -->
 <div class='col-sm-2'>
-	<tmpl-system-menu x-menu-context="project" x-project="projDescEdit.project"></tmpl-system-menu>
+	<tmpl-system-menu x-menu-context="'project'" x-project="projDescEdit.project"></tmpl-system-menu>
 </div>
 
 </section>
