--- a/modules/projects/client/views/project.html
+++ b/modules/projects/client/views/project.html
@@ -85,7 +85,7 @@
 
 	</div> <!-- /col9 -->
 	<div class='col-sm-2'>
-		<tmpl-system-menu x-menu-context="project" x-project="proj.project"></tmpl-system-menu>
+		<tmpl-system-menu x-menu-context="'project'" x-project="proj.project"></tmpl-system-menu>
 	</div>
 
 </section>
