--- a/modules/users/client/views/admin/list-users.client.view.html
+++ b/modules/users/client/views/admin/list-users.client.view.html
@@ -40,6 +40,6 @@
     </div>
   </div>
   <div class='col-sm-2'>
-    <tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+    <tmpl-system-menu x-menu-context="'settings'"></tmpl-system-menu>
   </div>
 </section>
