--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -59,7 +59,7 @@
     </div>
   </div>
   <div class='col-sm-2'>
-    <tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
+    <tmpl-system-menu x-menu-context="'settings'"></tmpl-system-menu>
   </div>
 
   <!--
