Schedule D3 control, Add Phases and Milestones manually

--- a/modules/projects/client/views/projects.html
+++ b/modules/projects/client/views/projects.html
@@ -19,8 +19,9 @@
 
 
 
-		<!-- <tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule> -->
-		<tmpl-projects-list2 id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-list2>
+		<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
+
+		<tmpl-projects-list2 id="anchor-list" x-projects='projects.projects'></tmpl-projects-list2>
 
 
 
