--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -172,6 +172,10 @@ th > .progress {
 	margin-bottom: 0;
 }
 
+td.no-padding {
+	padding: 0 !important;
+}
+
 pre {
 	padding: 0;
 	margin: 0;
@@ -980,5 +984,36 @@ h2.page-title {
 	border-top: 1px solid $border-grey;
 	margin-top: 5px;
 	margin-bottom: 8px;
+}
+
+
+
+
+
+
+
+.schedule-control-cell {
+	padding: 0 !important;
+	position: relative;
+}
+.svg-div-root {
+	position: absolute;
+	top:0;left:0;bottom:0;right:0;
+}
+
+.svg-element{
+	position: relative;
+	width: 100%;
+}
+
+.svg-background{
+	fill: lightyellow;
+	fill-opacity: 0.3;
+}
+
+.projectToday-line {
+	stroke: darkorange;
+	stroke-width: .5;
+	fill: none;
 }
 
