--- a/modules/projects/client/views/project-partials/project-activities.html
+++ b/modules/projects/client/views/project-partials/project-activities.html
@@ -6,6 +6,11 @@
 		<div class="row">
 			<div class="col-sm-4">
 
+                   <a href
+                       class="control-label pull-right"
+                       x-modal-add-phase-to-project
+                       x-project="projectsActs.project">Add Phase</a>
+
 				<label class="control-label">Phases</label>
 				<ul class="list-unstyled task-list">
 					<li ng-repeat="phase in projectActs.phases | orderBy:'order'">
@@ -18,6 +23,12 @@
 
 			</div>
 			<div class="col-sm-4">
+                   <a href
+                       class="control-label pull-right"
+                       x-modal-add-milestone-to-phase
+                       x-phase="projectActs.selectedPhase"
+                       ng-show="projectActs.selectedPhase">Add Milestone</a>
+
 				<label class="control-label">Milestones</label>
 				<ul class="list-unstyled task-list">
 					<li ng-repeat="milestone in projectActs.milestones | orderBy:'order'">
