--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -19,8 +19,9 @@
 			<tr ng-repeat="project in projectList.projects" class='clickable' ui-sref="project({id: project._id})">
 				<td ng-if="project.status === 'In Progress'">{{ project.name }}</td>
 				<td ng-if="project.status === 'In Progress'">{{ project.phase.name }}</td>
-				<td ng-if="project.status === 'In Progress'" colspan="5" class="bg-warning">
+				<td ng-if="project.status === 'In Progress'" colspan="5" class="schedule-control-cell">
 				<!-- show schedule widget -->
+					<tmpl-schedule-chart></tmpl-schedule-chart>
 				</td>
 
 				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.name }}</td>
