--- a/modules/templates/client/views/template-edit.html
+++ b/modules/templates/client/views/template-edit.html
@@ -23,7 +23,7 @@
 			<div class="row">
 			<div class="form-group">
 				<div class="col-sm-12">
-					<label for="title" class="input-label">Topic Name</label>
+					<label for="sname" class="input-label">Topic Name</label>
 					<input id="title" type="text" class="form-control  input-lg" ng-model="topic.name">
 				</div>
 			</div>
