projects abstract.  changed code that caused the linter to return a positive result.

--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -11,7 +11,7 @@
 					<p><strong>Status</strong>: {{ project.status }}</p>
 					<p><strong>Type</strong>: {{ project.type }}</p>
 					<p>{{ project.description }}</p>
-					<p><a html ui-sref="project({id: project._id})">Detail View</a></p>
+					<p><a html ui-sref="p.detail({projectid: project.code})">Detail View</a></p>
 				</div>
 			</div>
 		</info-window>
