--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -1,6 +1,5 @@
 <section id="projects-view" class="row">
-
-	<div class='col-sm-10'>
+	<ui-view class='col-sm-10'>
 
 		<div class="panel panel-default" ng-show="!projects.authentication.user">
 			<div class="panel-heading">
@@ -12,27 +11,16 @@
 			</div>
 		</div>
 
-		<tmpl-projects-map id="anchor-map" x-projects='projects.projects'></tmpl-projects-map>
+		<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>
 
-		<tmpl-projects-search id="anchor-search"></tmpl-projects-search>
-
-
-
-
-		<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
-
-		<tmpl-projects-list2 id="anchor-list" x-projects='projects.projects'></tmpl-projects-list2>
-
-
-
+		<tmpl-projects-list2 id="anchor-list" x-projects='projects'></tmpl-projects-list2>
 
 		<div x-window-height>
 			<tmpl-recent-activity id="anchor-recent"></tmpl-recent-activity>
 		</div>
 
-	</div>
+	</ui-view>
 	<div class='col-sm-2'>
 		<tmpl-system-menu x-menu-context="'projects'"></tmpl-system-menu>
 	</div>
-
 </section>
