--- a/modules/projects/client/views/projects-partials/projects.schedule.html
+++ b/modules/projects/client/views/projects-partials/projects.schedule.html
@@ -1,2 +1,42 @@
-schedule
-<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
+<section class='panel panel-default'>
+	<div class="block-content">
+		<h3>Current Projects</h3>
+	</div>
+	<table class="table table-condensed table-striped">
+		<thead>
+			<tr class="small">
+				<th width="20%">Project</th>
+				<th width="10%">Phase</th>
+				<th width="14%">-1 month</th>
+				<th width="14%">this month</th>
+				<th width="14%">next month</th>
+				<th width="14%">+2 months</th>
+				<th width="14%">+3 months</th>
+			</tr>
+		</thead>
+		<tbody>
+
+			<tr ng-repeat="project in projects" class='clickable' ui-sref="p.detail({projectid: project.code})">
+				<td ng-if="project.status === 'In Progress'">{{ project.name }}</td>
+				<td ng-if="project.status === 'In Progress'">{{ project.phase.name }}</td>
+				<td ng-if="project.status === 'In Progress'" colspan="5" class="schedule-control-cell">
+				<!-- show schedule widget -->
+					<tmpl-schedule-chart></tmpl-schedule-chart>
+				</td>
+
+				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.name }}</td>
+				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.phase.name }}</td>
+				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'" colspan="5">Project received certificate.</td>
+
+				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" >{{ project.name }}</td>
+				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'">{{ project.phase.name }}</td>
+				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" colspan="5">{{ project.status }}</td>
+			</tr>
+
+			<tr ng-if="projectList.projects.length === 0">
+				<td colspan="5">No projects match your filter criteria.</td>
+			</tr>
+		</tbody>
+	</table>
+
+</section>
