--- a/modules/templates/client/views/template-edit.html
+++ b/modules/templates/client/views/template-edit.html
@@ -1,104 +1,171 @@
-<h1 class="page-title">
-	Add/Edit Template
+<h1 class="page-title no-lower-margin">
+	Add / Edit Template
 </h1>
-	<div class="block-content">
-		<div class="panel-body">
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="documentType" class="control-label">For Document Type</label>
-						<select ng-disabled="which=='edit'" id="documentType" ng-model='template.documentType' class="form-control input-sm" ng-options="type as type for type in types"></select>
-					</div>
-				</div>
-			</div>
-			<div class="row" >
-				<h4>Sections</h4>
-				<button ng-click="addSection()">Append Section</button>
-				<div style="margin-left:20px" ng-repeat="section in template.sections">
-					<div class="form-group">
-						<hr/>
-						<div class="col-sm-4">
-							<label for="name" class="control-label">Section Name</label>
-							<input id="name" type="text" class="form-control input-sm" ng-model="section.name">
-						</div>
-						<div class="col-sm-2">
-							<label for="optional" class="control-label checkbox-inline">Optional
-							<input id="optional" type="checkbox" class="form-control input-sm" ng-model="section.optional">
-							</label>
-						</div>
-						<div class="col-sm-2">
-							<label for="multiple" class="control-label checkbox-inline">Multiple
-							<input id="multiple" type="checkbox" class="form-control input-sm" ng-model="section.multiple">
-							</label>
-						</div>
-						<div class="col-sm-2" ng-if="section.multiple">
-							<label for="isheader" class="control-label checkbox-inline">Header
-							<input id="isheader" type="checkbox" class="form-control input-sm" ng-model="section.isheader">
-							</label>
-						</div>
-						<div class="col-sm-2" ng-if="section.multiple">
-							<label for="isfooter" class="control-label checkbox-inline">Footer
-							<input id="isfooter" type="checkbox" class="form-control input-sm" ng-model="section.isfooter">
-							</label>
-						</div>
-					</div>
-					<div  ng-if="section.multiple && section.isheader">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<label for="shortDesc" class="control-label">Header (Optional)</label>
-								<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.header" rows=6></textarea>
-							</div>
-						</div>
-					</div>
-					<div >
-						<div class="col-sm-12">
-							<div class="form-group">
-								<label for="shortDesc" class="control-label">Template</label>
-								<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.template" rows=6></textarea>
-							</div>
-						</div>
-					</div>
-					<div  ng-if="section.multiple && section.isfooter">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<label for="shortDesc" class="control-label">Footer (Optional)</label>
-								<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.footer" rows=6></textarea>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12">
-						<h5>Variables</h5>
-						<button ng-click="addVariable(section.meta)">Add Variable</button>
-					</div>
-					<div style="margin-left:20px" ng-repeat="field in section.meta">
-						<hr/>
-						<div class="form-group">
-							<div class="col-sm-3">
-								<label for="name" class="control-label">Variable Name (no spaces)</label>
-								<input id="name" type="text" class="form-control input-sm" ng-model="field.name">
-							</div>
-							<div class="col-sm-3">
-								<label for="label" class="control-label">Label</label>
-								<input id="label" type="text" class="form-control input-sm" ng-model="field.label">
-							</div>
-							<div class="col-sm-3">
-								<label for="type" class="radio-inline">
-								<input name="type" type="radio" ng-model="field.type" value="Text">Text</label>
-								<label for="type" class="radio-inline">
-								<input name="type" type="radio" ng-model="field.type" value="Html">Html</label>
-							</div>
-							<div class="col-sm-3">
-								<label for="default" class="control-label">Default value</label>
-								<input id="default" type="text" class="form-control input-sm" ng-model="field.default">
-							</div>
-						</div>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="admin.template.list">Cancel</a>
+		<a class="btn btn-xs btn-link" href ng-click="save()">Save</a>
+	</div>
+</div>
+
+<div class="panel panel-default">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="form-group">
+					<label for="documentType" class="control-label">For Document Type</label>
+					<select ng-disabled="which=='edit'" id="documentType" ng-model='template.documentType' class="form-control input-sm" ng-options="type as type for type in types"></select>
 				</div>
 			</div>
 		</div>
 	</div>
-
-<div class="button-panel">
-	<a class="btn btn-danger" ui-sref="admin.template.list">Cancel</a>
-	<a class="btn btn-primary" href ng-click="save()">Save</a>
 </div>
 
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a href class="btn btn-xs btn-link" ng-click="addSection()">+ Append Section</a>
+	</div>
+</div>
+
+<div class="panel panel-default" ng-show="template.sections.length === 0">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-12">
+				<h5 class="no-upper-margin">Section</h5>
+			</div>
+		</div>	
+		<div class="row">
+			<div class="col-sm-12">
+				<p>There are no sections on this template.</p>
+				<a href class="small" ng-click="addSection()">+ Append Section</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="panel panel-default" ng-repeat="section in template.sections">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-12">
+				<h5 class="no-upper-margin">Section: {{ section.name }}</h5>
+			</div>
+		</div>	
+		<div class="row form-group">
+			<div class="col-sm-4">
+				<label for="name" class="control-label">Section Name</label>
+				<input id="name" type="text" class="form-control input-sm" ng-model="section.name">
+			</div>
+			<div class="col-sm-2">
+				<div class="checkbox control-with-label">
+					<label for="optional">
+						<input id="optional" type="checkbox" ng-model="section.optional">
+						Optional
+					</label>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="checkbox control-with-label">
+					<label for="multiple">
+						<input id="multiple" type="checkbox" ng-model="section.multiple">
+						Multiple
+					</label>
+				</div>
+			</div>
+			<div class="col-sm-2" ng-if="section.multiple">
+				<div class="checkbox control-with-label">
+					<label for="isheader">
+						<input id="isheader" type="checkbox" ng-model="section.isheader">
+						Header
+					</label>
+				</div>
+			</div>
+			<div class="col-sm-2" ng-if="section.multiple">
+				<div class="checkbox control-with-label">
+					<label for="isfooter">
+						<input id="isfooter" type="checkbox" ng-model="section.isfooter">
+						Footer
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row" ng-if="section.multiple && section.isheader">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="shortDesc" class="control-label">Header (Optional)</label>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.header" rows=6></textarea>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="shortDesc" class="control-label">Template</label>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.template" rows=6></textarea>
+				</div>
+			</div>
+		</div>
+		<div class="row" ng-if="section.multiple && section.isfooter">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="shortDesc" class="control-label">Footer (Optional)</label>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.footer" rows=6></textarea>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<h5>Variables</h5>
+			</div>
+		</div>
+		<div class="row form-group" ng-repeat="field in section.meta">
+			<div class="col-sm-3">
+				<label for="name" class="control-label">Variable Name (no spaces)</label>
+				<input id="name" type="text" class="form-control input-sm" ng-model="field.name">
+			</div>
+			<div class="col-sm-3">
+				<label for="label" class="control-label">Label</label>
+				<input id="label" type="text" class="form-control input-sm" ng-model="field.label">
+			</div>
+			<div class="col-sm-3">
+				<label for="type" class="radio-inline control-with-label">
+				<input name="type" type="radio" ng-model="field.type" value="Text">Text</label>
+				<label for="type" class="radio-inline control-with-label">
+				<input name="type" type="radio" ng-model="field.type" value="Html">Html</label>
+			</div>
+			<div class="col-sm-3">
+				<label for="default" class="control-label">Default value</label>
+				<input id="default" type="text" class="form-control input-sm" ng-model="field.default">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<a href class="small" ng-click="addVariable(section.meta)">+ Add Variable</a>
+			</div>
+		</div>
+		
+	</div>
+	<div class="panel-footer" ng-if="$last">
+
+		<div class="row">
+			<div class="col-sm-12">
+				<a href class="small" ng-click="addSection()">+ Append Section</a>
+			</div>
+		</div>			
+
+	</div>
+</div>
+
+
+<div class="panel panel-default">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-12 text-right">
+
+				<a class="btn btn-default" ui-sref="admin.template.list">Cancel</a>
+				<a class="btn btn-default" href ng-click="save()">Save</a>
+			</div>
+		</div>
+	</div>
+</div>
