--- a/modules/templates/client/views/template-view.html
+++ b/modules/templates/client/views/template-view.html
@@ -1,51 +1,132 @@
-<h1 class="page-title">
-	View Template
+<h1 class="page-title no-lower-margin">
+	View Template: {{template.documentType}}
 </h1>
-<div class="block-content">
-	<div class="panel-body">
-	<div class="row">
-		<div class="col-sm-3">Document Type</div>
-		<div class="col-sm-9">{{template.documentType}}</div>
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="admin.template.list">Cancel</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.template.edit({templateId:template._id})">Edit</a>
 	</div>
-	<div class="row">
-		<div class="col-sm-3">Version Number</div>
-		<div class="col-sm-9">{{template.versionNumber}}</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-3">Date Updated</div>
-		<div class="col-sm-9">{{template.dateUpdated}}</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-3">Sections</div>
-	</div>
-	<div class="row" ng-repeat="section in template.sections">
-		<div class="col-sm-2">&nbsp;</div>
-		<div class="col-sm-10">
-			<hr/>
-			<div class="row"><div class="col-sm-3">Name</div><div class="col-sm-9">{{section.name}}</div></div>
-			<div class="row"><div class="col-sm-3">Multiple</div><div class="col-sm-9">{{section.multiple}}</div></div>
-			<div class="row"><div class="col-sm-3">Optional</div><div class="col-sm-9">{{section.optional}}</div></div>
-			<div class="row"><div class="col-sm-3">Template</div><div class="col-sm-9"><textarea disabled="true" width="100%">{{section.template}}</textarea></div></div>
-			<div class="row"><div class="col-sm-3">Variables</div></div>
+</div>
 
-			<div class="row" ng-repeat="field in section.meta">
-				<div class="col-sm-2">&nbsp;</div>
-				<div class="col-sm-10">
-					<hr/>
-					<div class="row"><div class="col-sm-3">Name   </div><div class="col-sm-9">{{field.name}}   </div></div>
-					<div class="row"><div class="col-sm-3">Label  </div><div class="col-sm-9">{{field.label}}  </div></div>
-					<div class="row"><div class="col-sm-3">type   </div><div class="col-sm-9">{{field.type}}   </div></div>
-					<div class="row"><div class="col-sm-3">default</div><div class="col-sm-9">{{field.default}}</div></div>
+
+<div class="panel panel-default">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label for="documentType" class="control-label">For Document Type</label>
+					<p class='form-control-static'>{{ template.documentType }}</p>
 				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="form-group text-center">
+					<label for="documentType" class="control-label">Version</label>
+					<p class='form-control-static'>{{ template.versionNumber }}</p>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="form-group text-center">
+					<label for="documentType" class="control-label">Date Updated</label>
+					<p class='form-control-static'>{{ template.dateUpdated | date:'y-MM-dd HH:mm a'}}</p>
+				</div>
+			</div>			
+		</div>
+	</div>
+</div>
+
+<div class="panel panel-default" ng-show="template.sections.length === 0">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-12">
+				<h5 class="no-upper-margin">Section</h5>
+			</div>
+		</div>	
+		<div class="row">
+			<div class="col-sm-12">
+				<p>There are no sections on this template.</p>
 			</div>
 		</div>
 	</div>
+</div>
+
+<div class="panel panel-default" ng-repeat="section in template.sections">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-12">
+				<h5 class="no-upper-margin">Section: {{ section.name }}</h5>
+			</div>
+		</div>	
+		<div class="row">
+			<div class="col-sm-4">
+				<label for="name" class="control-label">Section Name</label>
+				<p class='form-control-static'>{{ section.name }}</p>
+			</div>
+			<div class="col-sm-2 text-center">
+				<label for="name" class="control-label">Optional</label>
+				<p class='form-control-static' ng-if="section.optional">Yes</p>
+				<p class='form-control-static' ng-if="!section.optional">No</p>
+			</div>
+		</div>
+		<div class="row" ng-if="section.multiple && section.isheader">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="shortDesc" class="control-label">Header (Optional)</label>
+					<div class='text-block-success form-control-static' ng-bind-html="section.header"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="shortDesc" class="control-label">Template</label>
+					<div class='text-block-success form-control-static' ng-bind-html="section.template"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row" ng-if="section.multiple && section.isfooter">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="shortDesc" class="control-label">Footer (Optional)</label>
+					<div class='text-block-success form-control-static' ng-bind-html="section.footer"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<h5>Variables</h5>
+			</div>
+		</div>
+		<div class="row form-group" ng-repeat="field in section.meta">
+			<div class="col-sm-3">
+				<label for="name" class="control-label">Variable Name (no spaces)</label>
+				<p class='form-control-static'>{{ field.name }}</p>
+			</div>
+			<div class="col-sm-3">
+				<label for="label" class="control-label">Label</label>
+				<p class='form-control-static'>{{ field.label }}</p>
+			</div>
+			<div class="col-sm-3">
+				<label for="label" class="control-label">Type</label>
+				<p class='form-control-static'>{{ field.type }}</p>
+			</div>
+			<div class="col-sm-3">
+				<label for="default" class="control-label">Default value</label>
+				<p class='form-control-static'>{{ field.default }}</p>
+			</div>
+		</div>
 	</div>
 </div>
-<div class="button-panel">
-	<a class="btn btn-danger" ui-sref="admin.template.list">Cancel</a>
-	<a class="btn btn-primary" ui-sref="admin.template.edit({templateId:template._id})">Edit</a>
+
+
+<div class="panel panel-default">
+	<div class="panel-body">
+		<div class="row">
+
+			<div class="col-sm-12 text-right">
+				<a class="btn btn-default" ui-sref="admin.template.list">Cancel</a>
+				<a class="btn btn-default" ui-sref="admin.template.edit({templateId:template._id})">Edit</a>
+			</div>
+
+		</div>
+	</div>
 </div>
-
-
-
