template rendering through multi compile

--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -18,6 +18,11 @@
 							<i class="glyphicon glyphicon-pencil"></i>
 							</a>
 						</td>
+						<td>
+							<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="admin.template.test({templateId:o.id})">
+							<i class="glyphicon glyphicon-play"></i>
+							</a>
+						</td>
 				</tr>
 			</table>
 		</section>
