--- a/modules/templates/client/views/template-test.html
+++ b/modules/templates/client/views/template-test.html
@@ -4,7 +4,7 @@
 <div class="row">
 	<div class="col-sm-3">{{dataset | json}}</div>
 	<div class="col-sm-9">
-		<tmpl-template-render x-template="template" x-data="dataset"></tmpl-template-render>
+		<tmpl-template-render x-template="template" x-document="dataset"></tmpl-template-render>
 	</div>
 </div>
 <div class="button-panel">
