--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -1,22 +1,22 @@
-<h1 class="page-title">Topics Library</h1>
+<h1 class="page-title no-lower-margin">Topics Library</h1>
 <div class="row text-right">
 	<div class="col-sm-12">
-		<a class="btn btn-info" ui-sref="admin.topic.create()"><i class="glyphicon glyphicon-plus"></i> Add New Topic</a>
+		<a class="btn btn-sm btn-link" ui-sref="admin.topic.create()">+ Add New Topic</a>
 	</div>
 </div>
-<div calss="row">&nbsp;</div>
+
 <div class="row">
 	<div class="col-sm-12">
 		<section class="panel panel-default">
 
-			<table ng-table="tableParams" class="table table-condensed table-bordered table-striped">
-				<tr ng-repeat="o in $data" ui-sref="admin.topic.detail({topicId:o._id})">
+			<table ng-table="tableParams" class="table table-condensed table-hover table-striped">
+				<tr ng-repeat="o in $data" ui-sref="admin.topic.detail({topicId:o._id})" class="clickable">
 					<td title="'Pillar'"  sortable="'pillar'"  filter="{'pillar':'select'}" filter-data="pillars" >{{o.pillar}}</td>
 					<td title="'Name'"    sortable="'name'"    filter="{'name':'text'}"                           >{{o.name}}</td>
 					<td title="'Type'"    sortable="'type'"    filter="{'type':'select'}"   filter-data="types"   >{{o.type}}</td>
 					<td title="'Parent'"  sortable="'parent'"  filter="{'parent':'text'}"                         >{{o.parent}}</td>
-					<td>
-						<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="admin.topic.edit({topicId:o._id})">
+					<td width="1%" class="text-right">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.topic.edit({topicId:o._id})">
 						<i class="glyphicon glyphicon-pencil"></i>
 						</a>
 					</td>
